--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   provider: ^5.0.0
   firebase_auth: ^2.0.0
   google_sign_in: ^5.0.4
+  adaptive_theme: ^3.0.0
+  url_launcher: ^6.1.3
 
 dev_dependencies:
   flutter_test:
