--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   google_sign_in: ^5.0.4
   adaptive_theme: ^3.0.0
   url_launcher: ^6.1.3
+  flutter_rating_bar: ^4.0.1
+  fluttertoast: ^8.0.9
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
